terraform/environments/dev/main.tf
resource "aws_vpc" "atlas" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = "atlas-dev-vpc"
    Environment = "dev"
    Project     = "atlas"
  }
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.atlas.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name        = "atlas-dev-public-subnet"
    Environment = "dev"
    Project     = "atlas"
    Tier        = "public"
  }
}

resource "aws_subnet" "private" {
  vpc_id            = aws_vpc.atlas.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "ap-south-1a"

  tags = {
    Name        = "atlas-dev-private-subnet"
    Environment = "dev"
    Project     = "atlas"
    Tier        = "private"
  }
}

resource "aws_internet_gateway" "atlas" {
  vpc_id = aws_vpc.atlas.id

  tags = {
    Name        = "atlas-dev-igw"
    Environment = "dev"
    Project     = "atlas"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.atlas.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.atlas.id
  }

  tags = {
    Name        = "atlas-dev-public-rt"
    Environment = "dev"
    Project     = "atlas"
  }
}


resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.atlas.id

  tags = {
    Name        = "atlas-dev-private-rt"
    Environment = "dev"
    Project     = "atlas"
  }
}

resource "aws_route_table_association" "private" {
  subnet_id      = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}
